adding code and creating some classes for Factura logic

--- a/src/main/java/com/proyecto/vista/VentanaGestorFacturas.form
+++ b/src/main/java/com/proyecto/vista/VentanaGestorFacturas.form
@@ -97,7 +97,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="title">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Proveedores"/>
+            <Property name="text" type="java.lang.String" value="Facturas"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="userSearchField">
