--- a/src/main/java/com/proyecto/vista/VentanaDashboard.form
+++ b/src/main/java/com/proyecto/vista/VentanaDashboard.form
@@ -53,7 +53,7 @@
                           <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                           <Component id="mensaje" min="-2" pref="389" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="header" pref="760" max="32767" attributes="0"/>
+                      <Component id="header" pref="930" max="32767" attributes="0"/>
                       <Component id="windowsContent" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -61,7 +61,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="menu" alignment="0" max="32767" attributes="0"/>
+              <Component id="menu" alignment="0" pref="780" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="mensaje" min="-2" pref="26" max="-2" attributes="0"/>
@@ -113,7 +113,7 @@
                       <Component id="jSeparator1" min="-2" pref="20" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="buttonsContent" min="-2" pref="370" max="-2" attributes="0"/>
-                      <EmptySpace pref="142" max="32767" attributes="0"/>
+                      <EmptySpace pref="282" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -170,7 +170,7 @@
                           <Component id="navText" max="32767" attributes="0"/>
                           <Component id="dateText" pref="434" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="260" max="32767" attributes="0"/>
+                      <EmptySpace pref="430" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
