change of styles of colors

--- a/src/main/java/com/proyecto/vista/VentanaRegistroUsuario.form
+++ b/src/main/java/com/proyecto/vista/VentanaRegistroUsuario.form
@@ -223,7 +223,7 @@
         <Component class="javax.swing.JButton" name="registerButton">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ad" green="5a" red="12" type="rgb"/>
+              <Color blue="33" green="0" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
