--- a/src/main/java/com/proyecto/vista/VentanaRegistroFactura.form
+++ b/src/main/java/com/proyecto/vista/VentanaRegistroFactura.form
@@ -256,7 +256,7 @@
         <Component class="javax.swing.JButton" name="registrarFacturaBtn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ad" green="5a" red="12" type="rgb"/>
+              <Color blue="33" green="0" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
@@ -290,9 +290,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="fechaRegistroField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField1"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -300,9 +297,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="fechaVencimientoField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField1"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -310,9 +304,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="descripcionField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField1"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -376,9 +367,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="nombreProdField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField4"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
@@ -386,9 +374,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="descripcionProdField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField4"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel13">
           <Properties>
@@ -396,9 +381,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="cantidadProdField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField4"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel14">
           <Properties>
@@ -406,9 +388,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="precioUniProdField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jTextField4"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="agregarProdBtn">
           <Properties>
