--- a/src/main/java/com/proyecto/vista/VentanaPrincipal.form
+++ b/src/main/java/com/proyecto/vista/VentanaPrincipal.form
@@ -51,7 +51,7 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="titleText" pref="220" max="32767" attributes="0"/>
+                          <Component id="titleText" pref="363" max="32767" attributes="0"/>
                           <EmptySpace min="500" pref="500" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jLabel2" max="32767" attributes="0"/>
@@ -96,7 +96,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="titleText" pref="34" max="32767" attributes="0"/>
+                  <Component id="titleText" pref="129" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Component id="jLabel2" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
@@ -167,7 +167,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="forma &#xf3;ptima y f&#xe1;cil el flujo de pr&#xe9;stamos y devoluciones de Libros. "/>
+            <Property name="text" type="java.lang.String" value="a"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
@@ -192,12 +192,12 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x2022; Registro de Usuarios y Libros Nuevos"/>
+            <Property name="text" type="java.lang.String" value="&#x2022; Registro de Usuarios y Factuars Nuevos"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x2022; Edici&#xf3;n de Usuarios y Libros existentes"/>
+            <Property name="text" type="java.lang.String" value="&#x2022; Edici&#xf3;n de Usuarios y Facturas existentes"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
