--- a/src/main/java/com/proyecto/vista/VentanaGestorProveedores.form
+++ b/src/main/java/com/proyecto/vista/VentanaGestorProveedores.form
@@ -54,11 +54,11 @@
                                   <EmptySpace min="-2" pref="327" max="-2" attributes="0"/>
                                   <Component id="addButton1" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="addButton" pref="92" max="32767" attributes="0"/>
+                                  <Component id="addButton" pref="89" max="32767" attributes="0"/>
                                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                                  <Component id="editButton" pref="85" max="32767" attributes="0"/>
+                                  <Component id="editButton" pref="84" max="32767" attributes="0"/>
                                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                                  <Component id="deleteButton" pref="88" max="32767" attributes="0"/>
+                                  <Component id="deleteButton" pref="86" max="32767" attributes="0"/>
                               </Group>
                               <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
@@ -77,14 +77,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="title" max="32767" attributes="0"/>
+                  <Component id="title" pref="84" max="32767" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="userSearchField" min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="searchButton" min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="346" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="357" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="deleteButton" alignment="3" min="-2" max="-2" attributes="0"/>
